# CloudComPy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  License.txt  README.md  TODO_list.md  activate_cloudcompy_env.bat.in  build.ps1  checkenv.py  deploy-copy-dlls.ps1  envCloudComPy.bat  envCloudComPy.sh  pyproject.toml
boostPython/: CMakeLists.txt  cloudComPy.cpp
building/: CMakeLists.txt  CloudComPy312Qt6_Ubuntu.yml  CloudComPy312_Ubuntu.yml  CloudComPy312_Ubuntu_fix.yml  CloudComPy313_Ubuntu.yml  CloudComPy313_Ubuntu_fix.yml  CloudComPy313_Windows_fix.yml  Dockerfile_CloudComPy311_build  Python312_minimal.yml  Python313_minimal.yml  conda-list_313_Ubuntu25.09  conda-list_313_Windows11  conda-list_Ubuntu20.04  conda-list_Ubuntu25.09  conda-list_Windows11_310  conda-list_Windows11_311  conda-list_Windows11_312  conda-list_macOS_311  conda-list_macOS_312  genCloudComPy_Conda310_Ubuntu2004.sh  genCloudComPy_Conda311_Ubuntu2004.sh  genCloudComPy_Conda311_docker.sh  genCloudComPy_Conda311_macos.zsh  genCloudComPy_Conda312_Ubuntu2509.sh  genCloudComPy_Conda312_macos.zsh  genCloudComPy_Conda313_Ubuntu2509.sh  genCloudComPy_native_Ubuntu2004.sh  genEnv312Qt6.bat  genEnv313.bat
cmake/: FindPYQTSIP.cmake
doc/: BuildLinuxConda.md  BuildLinuxCondaDocker.md  BuildUbuntuNative.md  BuildWindowsConda.md  CMakeLists.txt  ReleaseNotes.md  UseLinuxCondaBinary.md  UseMacOSCondaBinary.md  UseWindowsCondaBinary.md  prerequisitesVersions.md
doc/samples/: CMakeLists.txt
pyAPI/: CMakeLists.txt  PyScalarType.h  ccNumpyIncludes.h  initCC.cpp  initCC.h  optdefines.h.in  pyCC.cpp  pyCC.h
pybind11/: CMakeLists.txt  NeighbourhoodPy.cpp  NeighbourhoodPy.hpp  NeighbourhoodPy_DocStrings.hpp  ScalarFieldPy.cpp  ScalarFieldPy.hpp  ScalarFieldPy_DocStrings.hpp  __init__-Linux.py.in  __init__-Windows.py.in  __init__-macOS.py.in  __init__.py  __init__.py.in  ccFacetPy.cpp  ccFacetPy.hpp  ccFacetPy_DocStrings.hpp  ccGenericCloudPy.cpp  ccGenericCloudPy.hpp  ccGenericCloudPy_DocStrings.hpp  ccMeshPy.cpp  ccMeshPy.hpp  ccMeshPy_DocStrings.hpp  ccOctreePy.cpp  ccOctreePy.hpp  ccOctreePy_DocStrings.hpp  ccPointCloudPy.cpp  ccPointCloudPy.hpp  ccPointCloudPy_DocStrings.hpp  ccPolylinePy.cpp  ccPolylinePy.hpp  ccPolylinePy_DocStrings.hpp  ccPrimitivesPy.cpp  ccPrimitivesPy.hpp  ccPrimitivesPy_DocStrings.hpp  ccSensorPy.cpp  ccSensorPy.hpp  ccSensorPy_DocStrings.hpp  cloudComPy.cpp  cloudComPy.hpp  cloudComPy_DocStrings.hpp  cloudSamplingToolsPy.cpp  (+18 more)
pybind11/CSF/: CMakeLists.txt  CSFPy.cpp  CSF_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/Canupo/: CMakeLists.txt  CanupoPy.cpp  Canupo_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/Cork/: CMakeLists.txt  CorkPy.cpp  Cork_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/HPR/: CMakeLists.txt  HPRPy.cpp  HPR_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/HoughNormals/: CMakeLists.txt  HoughNormalsPy.cpp  HoughNormals_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/M3C2/: CMakeLists.txt  M3C2Py.cpp  M3C2_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/MeshBoolean/: CMakeLists.txt  MeshBooleanPy.cpp  MeshBoolean_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/PCL/: CMakeLists.txt  PCLPy.cpp  PCL_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/PCV/: CMakeLists.txt  PCVPy.cpp  PCV_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/PoissonRecon/: CMakeLists.txt  PoissonReconPy.cpp  PoissonRecon_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/RANSAC_SD/: CMakeLists.txt  RANSAC_SDPy.cpp  RANSAC_SD_DocStrings.hpp  __init__.py  __init__.py.in
pybind11/SRA/: CMakeLists.txt  SRAPy.cpp  SRA_DocStrings.hpp  __init__.py  __init__.py.in
sphinxDoc/: CMakeLists.txt  HoughNormals.rst  WinBundle.py.in.py  ccMesh.rst  ccPointCloud.rst  cloudComPy.rst  conf.py.in  genBundle.bat.in  genBundleDeployQt.bat.in  genLinuxBundle.sh.in  genSphinxDoc.sh.in  genSphinxDocConda.sh.in  genSphinxDocMacOSConda.zsh.in  genSphinxDocWindows.bat.in  getDependency.py  getDependency.py.in  index.rst  license.rst  postInstall.cmake  postInstallPyPI.cmake  userEntities.rst  userLoad.rst  userNumpy.rst  userUseCases.rst  version.rst
tests/: CMakeLists.txt  DartConfiguration.tcl.in  DartTestfile.txt  DartTestfile.win.txt  envPyCC.sh  execInstallTest.sh  execTest.sh.in  gendata.py.in  test001.py  test002.py  test003.py  test004.py  test005.py  test006.py  test007.py  test008.py  test009.py  test010.py  test011.py  test012.py  test013.py  test014.py  test015.py  test016.py  test017.py  test018.py  test019.py  test020.py  test021.py  test022.py  test023.py  test024.py  test025.py  test026.py  test027.py  test028.py  test029.py  test030.py  test031.py  test032.py  (+28 more)
viewer/: CMakeLists.txt  viewerPy.cpp  viewerPy.h
